--- a/TradeMaster6000/Client/wwwroot/index.html
+++ b/TradeMaster6000/Client/wwwroot/index.html
@@ -11,6 +11,7 @@
     <link href="manifest.json" rel="manifest" />
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
     <link href="TradeMaster6000.Client.styles.css" rel="stylesheet" />
+    <link href="css/custom-list2.css" rel="stylesheet"/>
 </head>
 
 <body>
