--- a/TradeMaster6000/Client/wwwroot/index.html
+++ b/TradeMaster6000/Client/wwwroot/index.html
@@ -9,7 +9,8 @@
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="TradeMaster6000.Client.styles.css" rel="stylesheet" />
-    <link href="css/custom-list2.css" rel="stylesheet"/>
+    <link href="css/custom-list2.css" rel="stylesheet" />
+    <link rel="stylesheet" href="_content/Radzen.Blazor/css/default.css">
 </head>
 
 <body>
@@ -22,6 +23,7 @@
     </div>
     <script src="_content/Microsoft.AspNetCore.Components.WebAssembly.Authentication/AuthenticationService.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
 </body>
 
 </html>
