--- a/TradeMaster6000/Client/wwwroot/index.html
+++ b/TradeMaster6000/Client/wwwroot/index.html
@@ -7,6 +7,7 @@
     <title>MONEY MACHINE</title>
     <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
+    <!--<link href="_content/Syncfusion.Blazor/styles/bootstrap4.css" rel="stylesheet" />-->
     <link href="css/app.css" rel="stylesheet" />
     <link href="TradeMaster6000.Client.styles.css" rel="stylesheet" />
     <link href="css/custom-list2.css" rel="stylesheet" />
