--- a/TradeMaster6000/Client/wwwroot/index.html
+++ b/TradeMaster6000/Client/wwwroot/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>MONEY MACHINE</title>
+    <title>Robin Hood</title>
     <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <!--<link href="_content/Syncfusion.Blazor/styles/bootstrap4.css" rel="stylesheet" />-->
