--- a/TradeMaster6000/Client/wwwroot/index.html
+++ b/TradeMaster6000/Client/wwwroot/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Robin Hood</title>
     <base href="/" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <!--<link href="_content/Syncfusion.Blazor/styles/bootstrap4.css" rel="stylesheet" />-->
     <link href="css/app.css" rel="stylesheet" />
